Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for pre-release sg3_utils-1.47 [20210503] [svn: r899]
  - sg_raw: fix prints of NVMe NVM command names
  - sg_ses: fix Windows problem "No command (cdb) given"
  - sg_lib: add sg_scsi_status_is_good()
    - pt_linux: fix verify(BytChk=0) which Linux SNTL translated
      to write, other SNTL cleanups
    - pt: check_pt_file_handle() add return value of 5 for
      FreeBSD for nvme(cam)
  - move some hex files from examples to inhex directory
  - major rework of lib/sg_pt_freebsd.c; make SNTL as similar
    as feasible to the Linux implementation
  - add testing/sg_take_snap
  - change links to http://sg.danny/cz/sg/* to https

Changelog for released sg3_utils-1.46 [20210329] [svn: r891]
  - sg_rep_pip: new utility: report provisioning initialization
    pattern command
  - sg_turs: estimated time-to-ready [spc6r03]
    - add --delay=MS option
  - sg_requests: substantial cleanup
  - sg_vpd: add Format presets and Concurrent positioning ranges
    - add hot-pluggable field in standard Inquiry [spc6r05]
    - fix vendor struct opts_t alignment
  - sg_inq: add hot-pluggable field in standard Inquiry
  - sg_dd: --verify : separate category for miscompare errors
    - --verify : oflag=coe continue on miscompares, counts them
    - add cdl= operand for command duration limit indexes
    - add oflag=nocreat and conv=nocreat : OFILE must exist
    - add iflag=00, ff, random flags
    - setup conditional auto rule for getrandom()
    - add command timeout after comma in time= operand
  - sg_get_elem_status: add ralwd bit sbc4r20a
  - sg_write_x: add dld bits to write(32) [sbc4r19a]
  - sg_rep_zones: print invalid write pointer LBA as -1 rather
    than 16 "f"s
  - sg_opcodes: improve handling of RWCDLP field